styles/style.css
html {
  box-sizing: border-box;
  font-size: 16px;
}

*,
*::before,
*::after {
  box-sizing: inherit;
  margin: 0;
  padding: 0;
}

input,
button {
  box-sizing: border-box;
  font-family: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
}

:root {
  --btn-bg: linear-gradient(#fff, #a9a9a9);
  --font-size: 1rem;
  --font-stack: Helvetica, sans-serif;
  --main-bg: #2b2c43;
  --primary-color: #fff;
  --section-bg: #a9a9a9;
}

body {
  background-color: var(--main-bg);
  color: var(--primary-color);
  font-family: var(--font-stack);
  font-size: var(--font-size);
  line-height: 1.5;
}

.container {
  align-items: center;
  display: flex;
  flex-direction: column;
  margin-top: 4rem;
  row-gap: 1.563rem;
}

header {
  text-align: center;
}

.validator-div {
  align-items: center;
  background-color: #000;
  border-radius: 15px;
  display: flex;
  flex-direction: column;
  height: 465px;
  padding-bottom: 1.20rem;
  padding-left: 1.05rem;
  padding-right: 1.05rem;
  padding-top: 1rem;
  width: min(80vw, 250px);
}

.circle-div {
  background-color: var(--section-bg);
  border-radius: 50%;
  flex: none;
  height: 10px;
  width: 10px;
}

.input-div {
  align-items: center;
  background-color: var(--section-bg);
  color: #000;
  display: inherit;
  flex: 1 0 auto;
  flex-direction: column;
  margin-bottom: 0.4rem;
  margin-top: 1rem;
  padding: 0.625rem 0.75rem;
  row-gap: 1.125rem;
  width: 100%;
}

#user-input {
  border: 1px solid #000;
  border-radius: 10px;
  padding-bottom: 0.625rem;
  padding-top: 0.625rem;
  text-align: center;
  width: 100%;
}

#results-div {
  color: #382d21;
  flex: 1 0 auto;
  font-size: 1.2em;
  max-height: 210px;
  overflow-y: auto;
  text-align: center;
  width: 100%;
}

.valid-p {
  color: #004f0c;
}

.buttons-div {
  column-gap: 1.563rem;
  display: inherit;
  justify-content: center;
  width: 100%;
}

#check-btn,
#clear-btn {
  background: var(--btn-bg);
  border: 3px outset #fff;
  font-size: 1.15em;
  max-width: 88px;
  width: 100%
}

#check-btn:hover,
#clear-btn:hover {
  cursor: pointer;
}

#check-btn:active,
#clear-btn:active {
  border: 3px inset #fff;
}

